# ferri

./: .gitignore  Cargo.toml  README.en.md  README.md  flake.nix
.github/workflows/: flake-check.yaml
src/: lib.rs  main.rs
src/distribution/: error.rs  limits.rs  mod.rs  names.rs  storage.rs  storage_service.rs
src/distribution/routes/: base.rs  content_discovery.rs  content_management.rs  mod.rs  pull.rs  push.rs  router_tests.rs
src/model/: media_types.rs  mod.rs
src/model/config/: mod.rs
src/model/descriptor/: mod.rs
src/model/digest/: mod.rs  parse.rs  verify.rs
src/model/index/: mod.rs
src/model/manifest/: mod.rs
src/testing/: mod.rs  sample_data.rs
tests/: integration_test.rs
