[package]
name = "ferri"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true

[dependencies]
actix-web = "4.11.0"
async-trait = "0.1.89"
chrono = { version = "0.4.41", default-features = false, features = ["std"] }
clap = { version = "4.5.45", features = ["derive"] }
digest = "0.10.7"
env_logger = "0.11.8"
hex = "0.4.3"
hmac-sha256 = { version = "1.1.12", features = ["traits"] }
log = "0.4.27"
regex-lite = "0.1.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["v4"] }

[dev-dependencies]
flate2 = "1.1.2"
tempfile = "3.21.0"
